force-app/main/default/objects/Pokemon__c/fields/abillity__c.field-meta.xml
<CustomField>
    <fullName>abillity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este valor viene del objeto skill</description>
    <label>ability</label>
    <referenceTo>skill__c</referenceTo>
    <relationshipLabel>Pokemons</relationshipLabel>
    <relationshipName>Pokemons</relationshipName>
    <type>Lookup</type>
</CustomField>