force-app/main/default/objects/Pokemon__c/fields/Generation__c.field-meta.xml
<CustomField>
    <fullName>Generation__c</fullName>
    <formula>IF( ExtId__c &gt;= 1 &amp;&amp;  ExtId__c  &lt;= 151, 1,
IF(ExtId__c &gt;= 152 &amp;&amp; ExtId__c &lt;= 251, 2,
IF(ExtId__c &gt;= 252 &amp;&amp; ExtId__c &lt;= 386, 3,
IF(ExtId__c &gt;= 387 &amp;&amp; ExtId__c &lt;= 493, 4,
IF(ExtId__c &gt;= 494 &amp;&amp; ExtId__c &lt;= 649, 5,
IF(ExtId__c &gt;= 650 &amp;&amp; ExtId__c &lt;= 721, 6,
IF(ExtId__c &gt;= 722 &amp;&amp; ExtId__c &lt;= 890, 7,
8)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>