force-app/main/default/objects/Pokemon__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Altura del Pokemón expresada en décimo metros</description>
    <label>Altura Décimal</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>