force-app/main/default/objects/Pokemon__c/fields/HeightMt__c.field-meta.xml
<CustomField>
    <fullName>HeightMt__c</fullName>
    <description>Altura expresada en metros</description>
    <formula>Height__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>