force-app/main/default/objects/Pokemon__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>sprites</description>
    <label>Imagen URL</label>
    <type>Url</type>
</CustomField>