force-app/main/default/objects/Pokemon__c/fields/Slot1__c.field-meta.xml
<CustomField>
    <fullName>Slot1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slot1</label>
    <referenceTo>Motion__c</referenceTo>
    <relationshipLabel>Pokemons</relationshipLabel>
    <relationshipName>Pokemons</relationshipName>
    <type>Lookup</type>
</CustomField>