force-app/main/default/objects/Pokemon__c/fields/StatsAttack__c.field-meta.xml
<CustomField>
    <fullName>StatsAttack__c</fullName>
    <inlineHelpText>Valor entre 1 y 250</inlineHelpText>
    <label>Attack</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>