force-app/main/default/objects/Pokemon__c/fields/StatsDefense__c.field-meta.xml
<CustomField>
    <fullName>StatsDefense__c</fullName>
    <inlineHelpText>Valor entre 1 y 230</inlineHelpText>
    <label>Defensa</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>