force-app/main/default/objects/Pokemon__c/fields/StatsHp__c.field-meta.xml
<CustomField>
    <fullName>StatsHp__c</fullName>
    <inlineHelpText>Valor entre 1 y 255</inlineHelpText>
    <label>Vida</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>