force-app/main/default/objects/Pokemon__c/fields/StatsSpeed__c.field-meta.xml
<CustomField>
    <fullName>StatsSpeed__c</fullName>
    <inlineHelpText>Determina el orden de ataque de los pokemones en el juego. Es un valor que varía en el rango de</inlineHelpText>
    <label>Velocidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>