force-app/main/default/objects/Pokemon__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Peso del Pokemon expresado en décimo kg</description>
    <label>PesoDm</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>