force-app/main/default/objects/Pokemon__c/fields/WeightKg__c.field-meta.xml
<CustomField>
    <fullName>WeightKg__c</fullName>
    <description>Peso expresado en Kg</description>
    <formula>Weight__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>